--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
 
   <body>
    {{>header}}
+   <p>This is the weather app created by Jeremy Katoff learning node using mapbox.com and darksky.net.  </p>
     <img class = 'portrait' src = 'img/robot.png' />
     
     {{>footer}}
